# pbk-ingestion

./: .envrc.example  .pre-commit-config.yaml  Makefile  main.py  main_extract.py  main_load.py  main_transform.py  pyproject.toml
.github/workflows/: cd.yml  cd_airflow.yml  cd_decoupled.yml  cd_monolithic.yml  pull_request_checks.yml  release.yml
cloud_function_etl/: main.py  utils.py
dags/: airflow_monitoring.py  airflow_monitoring_dag.py  etl_dag.py  test_dag.py  utils.py
src/: etl.py  extract.py  ingest.py  transform.py
tests/: test_etl.py  test_extract.py  test_ingest.py  test_transform.py  test_unit.py
